--- a/src/app/Components/signin/signin.component.html
+++ b/src/app/Components/signin/signin.component.html
@@ -7,14 +7,14 @@
         </div>
         <form #usersignin="ngForm" (ngSubmit)="signIn(usersignin.value)" [formGroup]="loginForm">
           <div class="mb-1">
-            <label for="email" class="form-label">Email address</label>
-            <div class="input-field" [class.error]="loginForm.controls['email'].dirty && loginForm.hasError('required','email')">
+            <label for="email" class="form-label">Username</label>
+            <div class="input-field" [class.error]="loginForm.controls['username'].dirty && loginForm.hasError('required','username')">
               <span class="fa fa-user"></span>
-              <input type="email" placeholder="Enter Email" name="email" ngModel formControlName="email">
+              <input type="text" placeholder="Username" name="username" ngModel formControlName="username">
             </div>
           </div>
-          <small *ngIf="loginForm.controls['email'].dirty && loginForm.hasError('required','email')"
-            class="text-danger">Email is Required</small>
+          <small *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required','username')"
+            class="text-danger">Username is Required</small>
             <!-- <small *ngIf="loginForm.controls['email'].dirty && loginForm.hasError('pattern','email')"
             class="text-danger">Enter Valid Email</small> -->
 
@@ -28,12 +28,12 @@
             </div>
           </div>
           <small *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required','password')"
-          class="text-danger">*Password is Required</small>
+          class="text-danger">Password is Required</small>
           <!-- <small *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('pattern','password')"
           class="text-danger">Password should contains <b>upercase</b>,<b>lowercase</b>,<b>number</b> <br/>and minimum <b>8</b> characters</small> -->
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
-        <a routerLink="/signup" class="pt-4">New User ? Sign up</a>
+        <!-- <a routerLink="/signup" class="pt-4">New User ? Sign up</a> -->
       </div>
     </div>
   </div>
