--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,22 +1,28 @@
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Point of Sale</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="logout()">Logout</a>
-          </li>
-       
-        </ul>
+
+
+
+<div id="body">
+  <app-header></app-header>
+  <div class="container-fluid ">
+    <div class="row ">
+      <div class="col-1 col-xxl-1 col-lg-1 col-md-1 col-sm-1 ">
+        <app-sidebar></app-sidebar>
       </div>
+      <div class=" col-11 col-xxl-11 col-lg-11 col-md-11 col-sm-11  ">
+        <!-- col-12 col-xxl-6 col-lg-12 col-md-12 col-sm-12 order-xxl-0 order-lg-0 -->
+        <app-categories></app-categories>
+      </div>
+      <!-- <div class="col-11 col-xxl-5 col-lg-11 col-md-11 col-sm-11 ">
+        <app-orders></app-orders>
+      </div> -->
+      <!-- <div class="col-12 col-xxl-6 col-lg-12 col-md-12 col-sm-12 order-xxl-1 order-lg-3 order-md-2 order-sm-1 order-1">
+       
+      </div> -->
     </div>
-  </nav>
+  </div>
+</div>
+
+
+
+
+
